--- a/client/db_view.html
+++ b/client/db_view.html
@@ -12,11 +12,15 @@
           <thead>
             <tr>
               <th>Collection Name</th>
+              <th>Count</th>
             </tr>
           </thead>
           <tbody>
             {{#each collections}}
-            <tr><td><a href='/admin/{{ name }}'>{{name}}</a></td></tr>
+            <tr>
+              <td><a href='/admin/{{ name }}'>{{name}}</a></td>
+              <td>{{ entry_count }}</td>
+            </tr>
             {{/each}}
           </tbody>
         </table>
