--- a/client/db_view.html
+++ b/client/db_view.html
@@ -1,31 +1,26 @@
 <template name='db_view'>
   <div class='z-mongo-admin'>
-    {{#if loggingIn}}
-      {{> spinner}}
-    {{else}}
-      {{> admin_navbar}}
-      <div class="container content">
-        <ul class="breadcrumb">
-          <li class="active">Home</li>
-        </ul>
-        <table class='table table-bordered table-striped'>
-          <thead>
-            <tr>
-              <th>Collection Name</th>
-              <th>Count</th>
-            </tr>
-          </thead>
-          <tbody>
-            {{#each collections}}
-            <tr>
-              <td><a href='/admin/{{ name }}'>{{name}}</a></td>
-              <td>{{ entry_count }}</td>
-            </tr>
-            {{/each}}
-          </tbody>
-        </table>
-        {{> admin_new_collection}}
-      </div>
-    {{/if}}
+    <div class="container content">
+      <ul class="breadcrumb">
+        <li class="active">Home</li>
+      </ul>
+      <table class='table table-bordered table-striped'>
+        <thead>
+          <tr>
+            <th>Collection Name</th>
+            <th>Count</th>
+          </tr>
+        </thead>
+        <tbody>
+          {{#each collections}}
+          <tr>
+            <td><a href='/data/{{ name }}'>{{name}}</a></td>
+            <td>{{ entry_count }}</td>
+          </tr>
+          {{/each}}
+        </tbody>
+      </table>
+      {{> admin_new_collection}}
+    </div>
   </div>
 </template>
