--- a/client/document_view.html
+++ b/client/document_view.html
@@ -1,28 +1,23 @@
 <template name="document_view">
   <div class='z-mongo-admin'>
-    {{#if loggingIn}}
-      {{> spinner}}
-    {{else}}
-      {{> admin_navbar}}
-      <div class="container content">
-        <ul class="breadcrumb">
-          <li><a href="/admin" class="home">Home</a> <span class="divider">/</span></li>
-          <li><a href="/admin/{{collection_name}}" class="collection">{{collection_name}}</a> <span class="divider">/</span></li>
-          <li class="active">{{document_id}}</li>
-        </ul>
-        <h1>{{document_id}}</h1>
-        <div id="doc-saved" class="alert alert-success {{adminHide}}">Your document was saved!</div>
-        <table class='table'>
-          <tbody>
-            {{# each fields }}
-              {{> admin_document_field}}
-            {{/each}}
-          </tbody>
-        </table>
-        <span class="btn admin-save">Save</span>
-        <span class="btn admin-delete">Delete</span>
-      </div>
-    {{/if}}
+    <div class="container content">
+      <ul class="breadcrumb">
+        <li><a href="/data" class="home">Home</a> <span class="divider">/</span></li>
+        <li><a href="/data/{{collection_name}}" class="collection">{{collection_name}}</a> <span class="divider">/</span></li>
+        <li class="active">{{document_id}}</li>
+      </ul>
+      <h1>{{document_id}}</h1>
+      <div id="doc-saved" class="alert alert-success {{adminHide}}">Your document was saved!</div>
+      <table class='table'>
+        <tbody>
+          {{# each fields }}
+          {{> admin_document_field}}
+          {{/each}}
+        </tbody>
+      </table>
+      <span class="btn admin-save">Save</span>
+      <span class="btn admin-delete">Delete</span>
+    </div>
   </div>
 </template>
 
@@ -30,7 +25,7 @@
   <tr>
     <td>{{ field_name }}:</td>
     {{#if field_is_id}}
-      <td>{{ field_value }}</td>
+    <td>{{ field_value }}</td>
     {{else}}
     <td><input type="text" class="field" name="{{ field_name }}" value="{{ field_value }}"></td>
     {{/if}}
