tweak db_view alignment

--- a/client/db_view.html
+++ b/client/db_view.html
@@ -1,6 +1,6 @@
 <template name='db_view'>
   <div class='z-mongo-admin'>
-    <div class="container content">
+    <div>
       <ul class="breadcrumb">
         <li class="active">Home</li>
       </ul>
